--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "SMap Backend",
   "main": "dist/main.js",
   "scripts": {
-    "start": "node dist/main.js",          
+    "start": "node dist/main.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "start:prod": "node dist/main.js",
     "build": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
