--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "helmet": "^7.0.0",
+    "nodemailer": "^7.0.9",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/node": "^20.5.6",
+    "@types/nodemailer": "^7.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.0"
   }
